added selector app css

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,11 @@
   color: #8a5607;
   text-decoration: underline;
 }
+/*footer*/
+#dropdown-basic-button {
+  width: 300px;
+}
+
+#form-lang {
+  width: 250px;
+}
