--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 .borderDotted {
   border: 2px dotted #0d6efd;
 }
+
+.color-orange {
+  color: #ab6310;
+}
+
+.hover :hover {
+  background-color: darkgray;
+}
